Bug 104288 - FILESAVE RTF: File size increases with factor 5 after re-saving a certain RTF-document
Summary: FILESAVE RTF: File size increases with factor 5 after re-saving a certain RTF...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:24.2.0 target:7.6.4
Keywords:
: 82033 101170 (view as bug list)
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2016-11-30 19:26 UTC by Telesto
Modified: 2023-11-11 20:44 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (1.33 MB, text/rtf)
2016-11-30 19:27 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2016-11-30 19:26:30 UTC
Description:
I have created a simple RTF document with Word. A table containing an image (filesize: 1,33MB). After re-saving the file with LO, the filesize increases to: 7.79 MB

Steps to Reproduce:
1. Download document attached. Take notice of the filesize
2. Open attached RTF document
3. Save RTF (CTRL+S)


Actual Results:  
Filesize is increasing to 7,79 MB

Expected Results:
Filesize stay's 1,33 mb


Reproducible: Always

User Profile Reset: YES

Additional Info:
Version: 5.4.0.0.alpha0+
Build ID: 4130c8def811d1dcc87eacaa8ae48ba02738a790
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-11-29_01:03:18
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Telesto 2016-11-30 19:27:27 UTC
Created attachment 129155 [details]
Example file
Comment 2 Xisco Faulí 2016-12-01 10:35:09 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: ef0e1c05c32a5a69502e0f0d1d97789c125345a2
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and 

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 3 Xisco Faulí 2016-12-01 10:38:03 UTC
Confirmed also in

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 4 QA Administrators 2018-07-19 02:42:41 UTC Comment hidden (obsolete)
Comment 5 Mike 2020-07-03 18:59:05 UTC
reproduced in 

Version: 7.0.0.0.beta2 (x64)
Build ID: 1c213561a365b5666167321de68c9977500c9612
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win
Locale: en-US (de_DE); UI: en-US
Calc: threaded
Comment 6 Xisco Faulí 2021-04-13 10:36:35 UTC
Still reproducible in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 8043fe3e45c8999c8eaf475ba46d50b125e38b93
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 7 QA Administrators 2023-04-14 03:25:28 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2023-11-02 08:38:15 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24ee09ab41924fd339835cbc7a54a5ba27f5c67e

tdf#104288: rtf export: drop \nonshppict on export

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Vasily Melenchuk (CIB) 2023-11-02 08:40:26 UTC
I suppose these days it is not essential to provide second image data for RTF readers not able to understand shapes. This automatically resolves given problem.
There are also several duplicate reports on this topic.
Comment 10 Gabor Kelemen (Collabora) 2023-11-06 08:45:37 UTC
*** Bug 82033 has been marked as a duplicate of this bug. ***
Comment 11 Gabor Kelemen (Collabora) 2023-11-06 08:48:19 UTC
*** Bug 101170 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2023-11-11 20:44:29 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/906377ef12bcf75da871b0c3dab1decaf5b20b32

tdf#104288: rtf export: drop \nonshppict on export

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.